# tinyState

./: .gitignore  .tscpp.rc  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
arch/posix/image/++PREFIX++/: lib
arch/posix_Cygwin/image/: SETTINGS_
arch/posix_Cygwin/image/++PREFIX++/: lib
arch/posix_Darwin/image/: SETTINGS_
arch/posix_Linux_Debian/image/: SETTINGS_
arch/posix_MinGW/: README.md  tsSignalCore.md
cmake/: AddTinyStateExample.cmake  AddTinyStateLibrary.cmake  config.h.in  tinyStateConfig.cmake  toolchain-mingw.cmake
docs/: BUILD_INTERNAL.md  CODING_CONVENTIONS.md  COOKBOOK.md  DOXYGEN.md  GOTCHAS.md  INSTALL.md  MACROS.md  MENTAL_MODEL.md  REFERENCE.md  SOCKET.md  custom.css
example/hello-world/: CMakeLists.txt
example/hello-world/src/classes/hw/c++/: hwHello.cpp
example/hello-world/src/h/hw/c++/: hwHello.h
example/hello-world/src/main/: main.cpp
example/interval-timer/: .tscpp.rc  CMakeLists.txt
example/interval-timer/src/classes/hw/c++/: hwIntervalTimer.cpp  hwMain.cpp  hwPiCalc.cpp
example/interval-timer/src/h/hw/c++/: hwIntervalTimer.h  hwPiCalc.h
example/interval-timer/src/main/: main.cpp
example/mmsgtest/: CMakeLists.txt
example/mmsgtest/src/classes/hw/c++/: hwMmsgTest.cpp
example/mmsgtest/src/h/hw/c++/: hwMmsgTest.h
example/mmsgtest/src/main/: main.cpp
example/naming-conventions/: CMakeLists.txt
example/naming-conventions/src/classes/ss/c++/: ssApplication.cpp  ssObject.cpp
example/naming-conventions/src/h/ss/c++/: ssApplication.h  ssObject.h
example/naming-conventions/src/main/: main.cpp
example/nettest/: CMakeLists.txt
example/nettest/src/classes/hw/c++/: hwNetTest.cpp
example/nettest/src/h/hw/c++/: hwNetTest.h
example/nettest/src/main/: main.cpp
example/parallel-demo/: CMakeLists.txt
example/parallel-demo/src/main/: main.cpp
example/regextest/: CMakeLists.txt
example/regextest/src/classes/hw/c++/: hwRegexTest.cpp
example/regextest/src/h/hw/c++/: hwRegexTest.h
example/regextest/src/main/: main.cpp
example/riobench/: CMakeLists.txt
example/riobench/src/classes/hw/c++/: hwRioBench.cpp
example/riobench/src/h/hw/c++/: hwRioBench.h
example/riobench/src/main/: main.cpp
example/rwlock-demo/: CMakeLists.txt
example/rwlock-demo/src/main/: main.cpp
example/semaphore-demo/: CMakeLists.txt
example/semaphore-demo/src/classes/hw/c++/: hwMain.cpp  hwWorker.cpp
example/semaphore-demo/src/h/hw/c++/: hwMain.h  hwWorker.h
example/semaphore-demo/src/main/: main.cpp
example/socktest/: CMakeLists.txt
example/socktest/src/classes/hw/c++/: hwSockPoke.cpp  hwSockTest.cpp
example/socktest/src/h/hw/c++/: hwSockPoke.h  hwSockTest.h
example/socktest/src/main/: main.cpp
example/srvtest/: CMakeLists.txt
example/srvtest/src/main/: main.cpp
example/systest/: CMakeLists.txt
example/systest/src/classes/hw/c++/: hwStress.cpp  hwSysTest.cpp  hwTsChild.cpp
example/systest/src/h/hw/c++/: hwStress.h  hwSysTest.h  hwTsChild.h
example/systest/src/main/: main.cpp  stress_main.cpp  tschild_main.cpp
example/udptest/: CMakeLists.txt
example/udptest/src/classes/hw/c++/: hwUdpTest.cpp
example/udptest/src/h/hw/c++/: hwUdpTest.h
example/udptest/src/main/: main.cpp
example/unixtest/: CMakeLists.txt
example/unixtest/src/classes/hw/c++/: hwUnixTest.cpp
example/unixtest/src/h/hw/c++/: hwUnixTest.h
example/unixtest/src/main/: main.cpp
math2/: CMakeLists.txt
src/classes/mth2/c++/: co_mthSurfaceMesh_write_STL.cpp  mComplex.cpp  mEllipsoid.cpp  mLongitudeLatitude.cpp  mMatrix.cpp  mObject.cpp  mRange.cpp  mTangentCoordinate.cpp  mVector.cpp  mthBox.cpp  mthControlOptimization.cpp  mthFFT.cpp  mthLeastSquares.cpp  mthMatrix.cpp  mthPrism.cpp  mthProgress.cpp  mthSurfaceMesh.cpp
src/classes/std2/: .gitignore  safe_strncpy.cpp
src/classes/ts2/c++/: .gitignore  co_tsThreadKill.cpp  fwIO.cpp  sArray.cpp  sBufferHandle.cpp  sCallSection.cpp  sEndian.cpp  sException.cpp  sObject.cpp  sThreadCond.cpp  sThreadMutexHandle.cpp  sThreadMutexRecursive.cpp  stdArray.cpp  stdBalancedTree.cpp  stdBuffer.cpp  stdEvent.cpp  stdEventHandle.cpp  stdFrameWork.cpp  stdHalfOrderQueue.cpp  stdHalfOrderQueueTS.cpp  stdInterval.cpp  stdLimitSemaphore.cpp  stdMutex.cpp  stdObject.cpp  stdQueue.cpp  stdQueueString.cpp  stdRx.cpp  stdSemaphore.cpp  stdString.cpp  stdStringTree.cpp  tinyState.cpp  ts2IO.cpp  ts2IOdevNull.cpp  ts2IOraw.cpp  ts2IOsockTCPconnect.cpp  ts2IOsockTCPserver.cpp  ts2IOsockUDP.cpp  ts2IOsockUnixServer.cpp  ts2IOunixClient.cpp  ts2Parallel.cpp  (+8 more)
src/h/mth2/c++/: co_mthSurfaceMesh_write_STL.h  mComplex.h  mCoordinate.h  mEllipsoid.h  mLongitudeLatitude.h  mMatrix.h  mObject.h  mPolar.h  mPolarDeg.h  mQuaternion.h  mRange.h  mTangentCoordinate.h  mVector.h  mthAdopt.h  mthBox.h  mthControlOptimization.h  mthFFT.h  mthLeastSquares.h  mthMatrix.h  mthPrism.h  mthProgress.h  mthSurfaceMesh.h
src/h/std2/: .gitignore  safe_strncpy.h  ts_mmsg.h
src/h/ts2/c++/: co_tsThreadKill.h  fwIO.h  pObject.h  s2IOstd.h  sArray.h  sBufferHandle.h  sCallSection.h  sEndian.h  sException.h  sHalfArray.h  sObject.h  sPicoState.h  sPtr.h  sRptr.h  sThreadCond.h  sThreadKey.h  sThreadMutex.h  sThreadMutexHandle.h  sThreadMutexHandleRelease.h  sThreadMutexRecursive.h  sTimer.h  sWptr.h  stdArray.h  stdArrayQueue.h  stdBalancedTree.h  stdBuffer.h  stdDualQueue.h  stdDualQueuePointer.h  stdEvent.h  stdEventHandle.h  stdFrameWork.h  stdHalfOrderQueue.h  stdHalfOrderQueueTS.h  stdInterval.h  stdLimitSemaphore.h  stdList.h  stdMutex.h  stdOSfundamental.h  stdObject.h  stdQueue.h  (+31 more)
src/scripts2/js/: top.js
src/scripts2/js/gt/: co_gtObjectAction.js  co_gtPolling.js  gtApplication.js  gtFrame.js  gtItem.js  gtObject.js  gtPane.js  gtPolling.js  gtRCTapplication.js  gtRequest.js  gtRequestSimple.js  gtScope.js  gtScopeNode.js  gtTable.js  gtWindow.js
src/scripts2/js/if/: ifAjax.js  ifAjaxDebug.js  ifRCTwebView.js  ifReactNative.js
src/scripts2/js/pig/: co_pigCatchAbort.js  co_pigMarshaller.js  pigActivate.js  (+42 more)
ts2/: CMakeLists.txt
utils/: gtt2  jscopy2  tinyState2  tscpp2  tscpp2.bat  tsjslink2  tslink2  tspig2
(+63 files in other folders)
